[gd_scene load_steps=7 format=3 uid="uid://bpuws3revuomr"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_ctk16"]
[ext_resource type="Texture2D" uid="uid://brfhl51e5ekkp" path="res://Sprites/Misc/TitleScreen.png" id="1_e8wjq"]

[sub_resource type="ImageTexture" id="ImageTexture_omkmq"]

[sub_resource type="Theme" id="Theme_u2f5n"]
Button/icons/icon = SubResource("ImageTexture_omkmq")

[sub_resource type="ImageTexture" id="ImageTexture_362qw"]

[sub_resource type="Shortcut" id="Shortcut_y0iap"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 768.0
offset_bottom = 432.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ctk16")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Panel"]
layout_mode = 0
offset_left = 490.0
offset_top = -4.0
offset_right = 1559.0
offset_bottom = 567.0
texture = ExtResource("1_e8wjq")

[node name="Play" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 773.0
offset_top = 406.0
offset_right = 1129.0
offset_bottom = 564.0
theme = SubResource("Theme_u2f5n")
theme_override_font_sizes/font_size = 52
theme_override_icons/icon = SubResource("ImageTexture_362qw")
shortcut = SubResource("Shortcut_y0iap")
text = "PLAY"

[node name="Tutorial" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 771.0
offset_top = 578.0
offset_right = 1127.0
offset_bottom = 736.0
theme_override_font_sizes/font_size = 52
shortcut = SubResource("Shortcut_y0iap")
text = "TUTORIAL"

[node name="Quit" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 792.0
offset_top = 752.0
offset_right = 1114.0
offset_bottom = 946.0
theme_override_font_sizes/font_size = 52
text = "QUIT"

[connection signal="pressed" from="Panel/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Panel/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="Panel/Quit" to="." method="_on_quit_pressed"]
